--- a/Allumini-Portal/index.html
+++ b/Allumini-Portal/index.html
@@ -106,7 +106,7 @@
   <div id="shout" class="hoc container clear"> 
     <!-- ################################################################################################ -->
     <article>
-      <h3 class="heading font-x2">Ut augue libero suscipit sagittis</h3>
+      <h3 class="heading font-x2">Department of Mathematics & Computer Application</h3>
       <p>Adipiscing dignissim non lectus pellentesque tellus nisi imperdiet at pretium ut iaculis tempor ligula nulla facilisi aliquam venenatis leo et orci sed mauris fusce aliquam suspendisse potenti sed tempus tempor.</p>
     </article>
     <!-- ################################################################################################ -->
@@ -119,7 +119,7 @@
   <section id="services" class="hoc container clear"> 
     <!-- ################################################################################################ -->
     <div class="center btmspace-80">
-      <h6 class="heading underline font-x2">Orci mauris pede erat</h6>
+      <h6 class="heading underline font-x2">Courses Our Department Offered</h6>
     </div>
     <ul class="nospace group">
       <li class="one_third">
@@ -422,10 +422,8 @@
 <div class="wrapper row5">
   <div id="copyright" class="hoc clear"> 
     <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-    <!-- ################################################################################################ -->
-  </div>
+    <p class="fl_left">Copyright &copy; 2024 - All Rights Reserved - <a href="#">Sameer Prashant Jadhav</a></p>
+    </div>
 </div>
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
