--- a/Allumini-Portal/index.html
+++ b/Allumini-Portal/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="English">
 <head>
 <title>Department of Mathmatics</title>
 <meta charset="utf-8">
@@ -10,19 +10,21 @@
 <div class="wrapper row0">
   <header id="header" class="hoc clear"> 
     <div id="logo" class="one_quarter first">
-      <h1 class="logoname clear"><a href="index.html"><i class="fas fa-handshake"></i> <span>Shicso</span></a></h1>
-      <p>Potenti sagittis aliquam iaculis</p>
+      <h1 class="logoname clear"><a href="index.html">
+        <!---- <i class="fas fa-handshake"></i> -----> 
+        <span>Mathematics Department</span></a></h1>
+      <p>Savitribai phule Pune University, Pune, Maharashtra</p>
     </div>
     <div class="three_quarter">
       <ul class="nospace clear">
         <li class="one_third first">
-          <div class="block clear"><a href="#"><i class="fas fa-phone"></i></a> <span><strong>Give us a call:</strong> +00 (123) 456 7890</span></div>
+          <div class="block clear"><a href="#"><i class="fas fa-phone"></i></a> <span><strong>Contact Us:</strong> +91-0000000000</span></div>
         </li>
         <li class="one_third">
-          <div class="block clear"><a href="#"><i class="fas fa-envelope"></i></a> <span><strong>Send us a mail:</strong> support@domain.com</span></div>
+          <div class="block clear"><a href="#"><i class="fas fa-envelope"></i></a> <span><strong>Email Us:</strong> support@xyz@.com</span></div>
         </li>
         <li class="one_third">
-          <div class="block clear"><a href="#"><i class="fas fa-clock"></i></a> <span><strong> Mon. - Sat.:</strong> 08.00am - 18.00pm</span></div>
+          <div class="block clear"><a href="#"><i class="fas fa-clock"></i></a> <span><strong> Mon. - Sat.</strong> 08.00am - 18.00pm</span></div>
         </li>
       </ul>
     </div>  
@@ -33,33 +35,67 @@
     <nav id="mainav">
       <ul class="clear">
         <li class="active"><a href="index.html">Home</a></li>
-        <li><a class="drop" href="#">Pages</a>
+        <li><a class="drop" href="#">People</a>
           <ul>
-            <li><a href="pages/gallery.html">Gallery</a></li>
-            <li><a href="pages/full-width.html">Full Width</a></li>
-            <li><a href="pages/sidebar-left.html">Sidebar Left</a></li>
-            <li><a href="pages/sidebar-right.html">Sidebar Right</a></li>
-            <li><a href="pages/basic-grid.html">Basic Grid</a></li>
-            <li><a href="pages/font-icons.html">Font Icons</a></li>
+            <li><a href="pages/gallery.html">Faculty</a></li>
+            <li><a href="pages/full-width.html">Short Tem Faculty</a></li>
+            <li><a href="pages/sidebar-left.html">Visitors</a></li>
+            <li><a href="pages/sidebar-right.html">Staff</a></li>
+            <li><a href="pages/basic-grid.html">Students</a></li>
+            <li><a href="pages/font-icons.html">Project Staff</a></li>
+            <li><a href="pages/font-icons.html">Past Members</a></li>
           </ul>
         </li>
-        <li><a class="drop" href="#">Dropdown</a>
+        <li><a class="drop" href="#">Academic Programs</a>
           <ul>
-            <li><a href="#">Level 2</a></li>
-            <li><a class="drop" href="#">Level 2 + Drop</a>
+            <li><a href="#">BSC Mathematics</a></li>
+            <li><a href="#">Integrated MSC</a></li>
+            <li><a href="#">Minor Program</a></li>
+            <li><a href="#">MSC Stastistics</a></li>
+            <li><a href="#">MSC Mathematics</a></li>
+            <li><a href="#">PHD Program</a></li>
+            <li><a href="#">International Student</a></li>
+            <li><a href="#">Carriculum Booklet</a></li>
+            <li><a class="drop" href="#">Courses</a>
               <ul>
-                <li><a href="#">Level 3</a></li>
-                <li><a href="#">Level 3</a></li>
-                <li><a href="#">Level 3</a></li>
+                <li><a href="#">Running Courses</a></li>
+                <li><a href="#">Mathematics Courses</a></li>
+                <li><a href="#">Running Statistics Courses</a></li>
               </ul>
             </li>
-            <li><a href="#">Level 2</a></li>
+            <li><a href="#">Academic Calender</a></li>
           </ul>
         </li>
-        <li><a href="#">Link Text</a></li>
-        <li><a href="#">Link Text</a></li>
-        <li><a href="#">Link Text</a></li>
-        <li><a href="#">Long Link Text</a></li>
+      
+        <li><a class="drop" href="#">Apply</a>
+          <ul>
+            <li><a href="pages/gallery.html">Faculty</a></li>
+            <li><a href="pages/gallery.html">Post Docs</a></li>
+          </ul>
+        </li>
+        <li><a class="drop" href="#">Research</a>
+          <ul>
+            <li><a href="#">Research Areas</a></li>
+            <li><a href="#">Reaearch Publications</a></li>
+            <li><a href="#">Faculty Achivements</a></li>
+            <li><a href="#">Awards</a></li>
+          </ul>
+        </li>
+        <li><a class="drop" href="#">News & Events</a>
+          <ul>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Events & Seminars</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Allumini Section</a></li>
+
+        <li><a class="drop" href="#">About Us</a>
+          <ul>
+            <li><a href="#">Vision & Mision</a></li>
+            <li><a href="#">History</a></li>
+            <li><a href="#">Department Committees</a></li>
+          </ul>
+        </li>
       </ul>
     </nav>
   </div>
@@ -67,7 +103,7 @@
 <div class="wrapper bgded overlay" style="background-image:url('images/demo/backgrounds/01.png');">
   <div id="pageintro" class="hoc clear">     
     <article>
-      <h3 class="heading">Department of Mathrmatics & Computer Application</h3>
+      <h3 class="heading">Department of Mathrmatics Savitribai Phule Pune University</h3>
       <footer>
         <ul class="nospace inline pushright">
           <li><a class="btn" href="#">About Us</a></li>
@@ -106,8 +142,11 @@
   <div id="shout" class="hoc container clear"> 
     <!-- ################################################################################################ -->
     <article>
-      <h3 class="heading font-x2">Department of Mathematics & Computer Application</h3>
-      <p>Adipiscing dignissim non lectus pellentesque tellus nisi imperdiet at pretium ut iaculis tempor ligula nulla facilisi aliquam venenatis leo et orci sed mauris fusce aliquam suspendisse potenti sed tempus tempor.</p>
+      <h3 class="heading font-x2">Department of Mathematics Savitribai Phule Pune University</h3>
+      <p>Empowering Minds with Infinite Possibilities,
+        Unlocking the Secrets of Numbers and Theories,
+        Nurturing Innovation and Analytical Excellence,
+        At the Department of Mathematics</p>
     </article>
     <!-- ################################################################################################ -->
   </div>
@@ -124,52 +163,55 @@
     <ul class="nospace group">
       <li class="one_third">
         <article><a href="#"><i class="fab fa-fort-awesome"></i></a>
-          <h6 class="heading">Fringilla</h6>
-          <p>Tempus eget mattis et risus nulla ligula in quam sed lobortis rutrum purus pellentesque dictum augue in quam.</p>
+          <h6 class="heading">ABC</h6>
+          <p>Tempus eget mattis et risus nulla ligula in quam sed lobortis rutrum 
+            purus pellentesque dictum augue in quam.</p>
           <footer><a href="#"><i class="fas fa-arrow-right"></i></a></footer>
         </article>
       </li>
       <li class="one_third">
         <article><a href="#"><i class="fab fa-deviantart"></i></a>
-          <h6 class="heading">Tristique</h6>
-          <p>Nunc rhoncus nisi eu est nulla dolor donec ut dolor aliquam eget nunc etiam consequat enim vel nisl donec.</p>
+          <h6 class="heading">LMN</h6>
+          <p>Nunc rhoncus nisi eu est nulla dolor donec ut dolor aliquam eget 
+            nunc etiam consequat enim vel nisl donec.</p>
           <footer><a href="#"><i class="fas fa-arrow-right"></i></a></footer>
         </article>
       </li>
       <li class="one_third">
         <article><a href="#"><i class="fab fa-sticker-mule"></i></a>
-          <h6 class="heading">Bibendum</h6>
-          <p>Hendrerit velit ac augue cras pharetra donec ligula mauris euismod sed lobortis quis ultricies lacus aenean.</p>
+          <h6 class="heading">PQR</h6>
+          <p>Hendrerit velit ac augue cras pharetra donec ligula mauris
+             euismod sed lobortis quis ultricies lacus aenean.</p>
           <footer><a href="#"><i class="fas fa-arrow-right"></i></a></footer>
         </article>
       </li>
       <li class="one_third">
         <article><a href="#"><i class="fas fa-user-secret"></i></a>
-          <h6 class="heading">Phasellus</h6>
-          <p>Auctor lorem a felis aliquam quam mi rutrum malesuada consequat vitae accumsan ut lacus aliquam ante tortor.</p>
+          <h6 class="heading">XYZ</h6>
+          <p>Auctor lorem a felis aliquam quam mi rutrum malesuada
+             consequat vitae accumsan ut lacus aliquam ante tortor.</p>
           <footer><a href="#"><i class="fas fa-arrow-right"></i></a></footer>
         </article>
       </li>
       <li class="one_third">
         <article><a href="#"><i class="fas fa-quidditch"></i></a>
-          <h6 class="heading">Vestibulum</h6>
-          <p>Suscipit sed semper ac nulla quisque eget lectus a quam ullamcorper consectetuer aliquam molestie tempor mauris.</p>
+          <h6 class="heading">LMN</h6>
+          <p>Suscipit sed semper ac nulla quisque eget lectus a quam 
+            ullamcorper consectetuer aliquam molestie tempor mauris.</p>
           <footer><a href="#"><i class="fas fa-arrow-right"></i></a></footer>
         </article>
       </li>
       <li class="one_third">
         <article><a href="#"><i class="fas fa-wheelchair"></i></a>
-          <h6 class="heading">Pellentesque</h6>
-          <p>Nunc accumsan metus quis metus vestibulum ut neque proin commodo semper magna aenean id eros vitae.</p>
+          <h6 class="heading">QWE</h6>
+          <p>Nunc accumsan metus quis metus vestibulum ut neque proin 
+            commodo semper magna aenean id eros vitae.</p>
           <footer><a href="#"><i class="fas fa-arrow-right"></i></a></footer>
         </article>
       </li>
     </ul>
-    <!-- ################################################################################################ -->
   </section>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <div class="wrapper bgded overlay light" style="background-image:url('images/demo/backgrounds/01.png');">
   <section id="cta" class="hoc container clear"> 
